# SlicerImageCompare

./: CMakeLists.txt  README.md
SyntheticCTEvaluation/: CMakeLists.txt  SyntheticCTEvaluation.py
SyntheticCT_evaluation/: CMakeLists.txt  SyntheticCT_evaluation.py
